--- a/League/Views/Shared/Components/Navigation/BootstrapTopNavWithDropdowns.cshtml
+++ b/League/Views/Shared/Components/Navigation/BootstrapTopNavWithDropdowns.cshtml
@@ -1,5 +1,4 @@
-﻿@using cloudscribe.Web.Navigation
-@using League.Navigation
+﻿@using League.Navigation
 @using Microsoft.Extensions.Localization
 @model NavigationViewModel
 @inject IStringLocalizer<NavigationResource> Localizer
