Added assembly versions to AboutLeague.cshtml

--- a/League/Views/Home/AboutLeague.de.cshtml
+++ b/League/Views/Home/AboutLeague.de.cshtml
@@ -56,6 +56,18 @@
             <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.HomeGeneralContact" class="link font-weight-bolder">Kontaktiere uns</a> um eine Liga mit dieser Plattform zu organisieren.</div>
         </article>
     </div>
+    <div class="row">
+        <article class="col-8">
+            @{
+                var leagueAssembly = System.Reflection.Assembly.GetAssembly(typeof(League.Startup))?.GetName();
+                var tmAssembly = System.Reflection.Assembly.GetAssembly(typeof(TournamentManager.DateTimePeriod))?.GetName();
+                if (leagueAssembly != null && tmAssembly != null)
+                {
+                    <div>Eingesetzt: @leagueAssembly.Name v@(leagueAssembly.Version) und @tmAssembly.Name v@(tmAssembly.Version)</div>
+                }
+            }
+        </article>
+    </div>
 </div>
 @section styles {
     <style type="text/css">
