--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -4,11 +4,11 @@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @model ChangePasswordViewModel
-@{var organizationRoute = TenantContext.SiteContext.UrlSegmentValue;}
+@{var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="change-password" title="@Localizer["Change Password"].Value" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-organization="@organizationRoute" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-organization="@tenantUrlSegment" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
