--- a/League/Views/Manage/_SetPasswordModalPartial.cshtml
+++ b/League/Views/Manage/_SetPasswordModalPartial.cshtml
@@ -7,14 +7,14 @@
 @inject UserManager<ApplicationUser> UserManager
 @{
     ViewData["Title"] = Localizer["Set Password"].Value;
-    var organizationRoute = TenantContext.SiteContext.UrlSegmentValue;
+    var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
     ViewContext.ClientValidationEnabled = true;
 }
 @model SetPasswordViewModel
 <!-- Modal -->
 <modal id="set-password" title="@ViewData["Title"]" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.SetPassword)" asp-route-organization="@organizationRoute" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.SetPassword)" asp-route-organization="@tenantUrlSegment" method="post" role="form">
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <p class="text-info">
                 @Localizer["You do not have a local password for this site. Add a local password so you can sign in without an external login."]
