--- a/League/Views/Team/List.cshtml
+++ b/League/Views/Team/List.cshtml
@@ -6,7 +6,7 @@
 @model League.Models.TeamViewModels.TeamListModel
 @{
     ViewData["Title"] = Localizer["Teams"].Value + " - " + Model.Tournament.Name;
-    var organizationRoute = TenantContext.SiteContext.UrlSegmentValue;
+    var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
     if (Model.RoundsWithTeams.Count == 0)
     {
         <div class="mb-0 pb-1">
@@ -59,7 +59,7 @@
                                     <tr>
                                         <td>@t.TeamNameForRound</td>
                                         <td>@t.TeamClubName</td>
-                                        <td class="text-center"><a asp-action="@nameof(League.Controllers.Team.Single)" asp-controller="@nameof(League.Controllers.Team)" asp-route-organization="@organizationRoute" asp-route-id="@t.TeamId" class=""><i class="fas fa-ellipsis-h"></i></a></td>
+                                        <td class="text-center"><a asp-action="@nameof(League.Controllers.Team.Single)" asp-controller="@nameof(League.Controllers.Team)" asp-route-organization="@tenantUrlSegment" asp-route-id="@t.TeamId" class=""><i class="fas fa-ellipsis-h"></i></a></td>
                                     </tr>
                                 }
                             }
