--- a/League/Views/Team/_ChangeVenueModalPartial.cshtml
+++ b/League/Views/Team/_ChangeVenueModalPartial.cshtml
@@ -5,7 +5,7 @@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @model (long TeamId, long? VenueId)
-@{var organizationRoute = TenantContext.SiteContext.UrlSegmentValue;}
+@{var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="change-venue" title="@Localizer["Change team venue"].Value" tabindex="-1">
     <modal-body>
@@ -16,24 +16,24 @@
                     <a asp-action="@nameof(Venue.Edit)"
                        asp-controller="@nameof(Venue)"
                        asp-route-id="@Model.VenueId"
-                       asp-route-organization="@organizationRoute"
-                       asp-route-returnurl="@Url.Action(nameof(Team.MyTeam), nameof(Team), new { Organization = organizationRoute })"
+                       asp-route-organization="@tenantUrlSegment"
+                       asp-route-returnurl="@Url.Action(nameof(Team.MyTeam), nameof(Team), new { Organization = tenantUrlSegment })"
                        site-authorize-resource site-resource="@new List<VenueTeamRow>{{ new VenueTeamRow{ TeamId = Model.TeamId, VenueId = Model.VenueId.Value }}}"
                        site-requirement="@League.Authorization.VenueOperations.EditVenue"
                        class="btn btn-primary btn-block">@Localizer["Edit current venue"]</a>
                 }
             </div>
             <div class="mb-4">
-                <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.SelectVenue)" asp-route-organization="@organizationRoute" asp-route-tid="@Model.TeamId" method="get" role="form">
+                <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.SelectVenue)" asp-route-organization="@tenantUrlSegment" asp-route-tid="@Model.TeamId" method="get" role="form">
                     <button type="button" site-ajax-submit class="btn btn-primary btn-block">@Localizer["Select another venue"]</button>
                 </form>
             </div>
             <div>
                 <a asp-action="@nameof(Venue.Create)"
                    asp-controller="@nameof(Venue)"
-                   asp-route-organization="@organizationRoute"
+                   asp-route-organization="@tenantUrlSegment"
                    asp-route-tid="@Model.TeamId"
-                   asp-route-returnurl="@Url.Action(nameof(Team.MyTeam), nameof(Team), new { Organization = organizationRoute })"
+                   asp-route-returnurl="@Url.Action(nameof(Team.MyTeam), nameof(Team), new { Organization = tenantUrlSegment })"
                    site-authorize-resource site-resource="@new List<VenueTeamRow>()"
                    site-requirement="@League.Authorization.VenueOperations.CreateVenue"
                    class="btn btn-primary btn-block">@Localizer["Create new team venue"]</a>
