--- a/League/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/League/Views/Account/ResetPasswordConfirmation.cshtml
@@ -3,7 +3,7 @@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @{ ViewData["Title"] = Localizer["New Password Confirmation"].Value;
-                var organizationRoute = TenantContext.SiteContext.UrlSegmentValue; }
+                var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue; }
 <h2 class="h2">@ViewData["Title"].</h2>
 <hr />
 <div>
@@ -11,6 +11,6 @@
         @Localizer["The new password is saved and activated"].<br />
     </site-alert>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@organizationRoute" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a>.
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a>.
     </p>
 </div>
