--- a/League/Views/Account/SignInRejected.cshtml
+++ b/League/Views/Account/SignInRejected.cshtml
@@ -4,7 +4,7 @@
 @inject ITenantContext TenantContext
 @model Microsoft.AspNetCore.Identity.SignInResult
 @{
-    var organizationRoute = TenantContext.SiteContext.UrlSegmentValue;
+    var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
     if (Model == Microsoft.AspNetCore.Identity.SignInResult.LockedOut)
     {
         ViewData["Title"] = Localizer["Account has been locked out"];
@@ -25,6 +25,6 @@
         @(Localizer["Please try to sign-in later"]).<br />
     </site-alert>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@organizationRoute" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign in"]</a>
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign in"]</a>
     </p>
 </div>
