--- a/League/Views/Manage/_ChangeEmailModalPartial.cshtml
+++ b/League/Views/Manage/_ChangeEmailModalPartial.cshtml
@@ -4,7 +4,7 @@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @model ChangeEmailViewModel
-@{var organizationRoute = TenantContext.SiteContext.UrlSegmentValue;}
+@{var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;}
 <!-- Modal -->
 <modal id="change-email" title="@Localizer["Change Primary Email Address"].Value" tabindex="-1">
     <modal-body>
@@ -12,7 +12,7 @@
             <p>@Localizer["For changing your primary email address we will send a confirmation code to the new email."]</p>
             <p><strong>@Localizer["The primary email address will be changed only after the confirmation link in our message was submitted."]</strong></p>
         </div>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangeEmail)" asp-route-organization="@organizationRoute" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangeEmail)" asp-route-organization="@tenantUrlSegment" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
