--- a/League/Views/Team/MyTeam.cshtml
+++ b/League/Views/Team/MyTeam.cshtml
@@ -13,7 +13,7 @@
 @model League.Models.TeamViewModels.MyTeamShowModel
 @{
     ViewData["Title"] = Localizer["My Team"].Value + " - " + Model.Tournament.Name;
-    var organizationRoute = TenantContext.SiteContext.UrlSegmentValue;
+    var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
     string DisplayPhoneNo(string phoneNo)
     {
         return PhoneNumberService.Format(phoneNo, Region.TwoLetterISORegionName);
@@ -49,7 +49,7 @@
                             <div><h5>@Localizer["Team"]</h5></div>
                             <div>
                                 <button type="button" site-toggle-modal-ajax
-                                        site-data-url="@Url.Action(nameof(Team.Edit), nameof(Team), new { Organization = organizationRoute, teamId = teamVenueInfo.TeamId})"
+                                        site-data-url="@Url.Action(nameof(Team.Edit), nameof(Team), new { Organization = tenantUrlSegment, teamId = teamVenueInfo.TeamId})"
                                         site-authorize-resource site-resource="@new TeamEntity(teamVenueInfo.TeamId)"
                                         site-requirement="@League.Authorization.TeamOperations.EditTeam" class="btn btn-sm btn-primary">
                                     @Localizer["Edit"]
@@ -88,7 +88,7 @@
                                 <a class="btn btn-sm btn-primary d-inline-block"
                                    asp-controller="@nameof(Upload)"
                                    asp-action="@nameof(Upload.TeamPhoto)"
-                                   asp-route-organization="@organizationRoute"
+                                   asp-route-organization="@tenantUrlSegment"
                                    asp-route-id="@teamVenueInfo.TeamId"
                                    site-authorize-resource site-resource="@new TeamEntity(teamVenueInfo.TeamId)"
                                    site-requirement="@League.Authorization.TeamOperations.ChangePhoto">@Localizer["Change"]</a>
@@ -102,7 +102,7 @@
                                 <a class="btn btn-sm btn-primary d-inline-block"
                                    asp-controller="@nameof(Upload)"
                                    asp-action="@nameof(Upload.TeamPhoto)"
-                                   asp-route-organization="@organizationRoute"
+                                   asp-route-organization="@tenantUrlSegment"
                                    asp-route-id="@teamVenueInfo.TeamId"
                                    site-authorize-resource site-resource="@new TeamEntity(teamVenueInfo.TeamId)"
                                    site-requirement="@League.Authorization.TeamOperations.ChangePhoto">@Localizer["Upload"]</a>
@@ -116,7 +116,7 @@
                             <div><h5>@Localizer["Venue"]</h5></div>
                             <div>
                                 <button type="button"
-                                        site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Team.ChangeVenue), new { Organization = organizationRoute, tid = teamVenueInfo.TeamId })"
+                                        site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Team.ChangeVenue), new { Organization = tenantUrlSegment, tid = teamVenueInfo.TeamId })"
                                         site-authorize-resource site-resource="@new TeamEntity(teamVenueInfo.TeamId)"
                                         site-requirement="@League.Authorization.TeamOperations.EditTeam"
                                         class="btn btn-sm btn-primary">
@@ -135,7 +135,7 @@
                                     <div>
                                         <a class="link" asp-action="@nameof(Map.Venue)"
                                            asp-controller="@nameof(Map)"
-                                           asp-route-organization="@organizationRoute"
+                                           asp-route-organization="@tenantUrlSegment"
                                            asp-route-id="@teamVenueInfo.VenueId.Value">@Localizer["Direction"]</a>
                                     </div>
                                     <div class="text-muted small">
@@ -161,7 +161,7 @@
                                     <button type="button"
                                             site-toggle-modal-ajax
                                             site-data-url="@Url.Action(nameof(Role.Add),
-                                                           nameof(Role), new {Organization = organizationRoute, tid = teamVenueInfo.TeamId, ReturnUrl = Url.Action(nameof(Team.MyTeam), nameof(Team), new {Organization = organizationRoute, id = teamVenueInfo.TeamId})})} )"
+                                                           nameof(Role), new {Organization = tenantUrlSegment, tid = teamVenueInfo.TeamId, ReturnUrl = Url.Action(nameof(Team.MyTeam), nameof(Team), new {Organization = tenantUrlSegment, id = teamVenueInfo.TeamId})})} )"
                                             site-authorize-resource site-resource="@new TeamEntity(teamVenueInfo.TeamId)"
                                             site-requirement="@League.Authorization.TeamOperations.AddTeamMember"
                                             class="btn btn-sm btn-primary">
@@ -208,7 +208,7 @@
                                                 }
                                                 <div>
                                                     <button type="button"
-                                                            site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Role.Remove), nameof(Role), new { Organization = organizationRoute, rolename = userInfo.IsManager ? League.Identity.Constants.ClaimType.ManagesTeam : League.Identity.Constants.ClaimType.PlaysInTeam, uid = userInfo.UserId, un = userInfo.CompleteName, tid = teamVenueInfo.TeamId, ReturnUrl = Url.Action(nameof(Team.MyTeam), new {Organization = organizationRoute, id = teamVenueInfo.TeamId})})"
+                                                            site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Role.Remove), nameof(Role), new { Organization = tenantUrlSegment, rolename = userInfo.IsManager ? League.Identity.Constants.ClaimType.ManagesTeam : League.Identity.Constants.ClaimType.PlaysInTeam, uid = userInfo.UserId, un = userInfo.CompleteName, tid = teamVenueInfo.TeamId, ReturnUrl = Url.Action(nameof(Team.MyTeam), new {Organization = tenantUrlSegment, id = teamVenueInfo.TeamId})})"
                                                             site-authorize-resource site-resource="@new TeamEntity(teamVenueInfo.TeamId)"
                                                             site-requirement="@League.Authorization.TeamOperations.RemoveTeamMember"
                                                             class="btn btn-sm btn-primary">
