Added logging to class Startup

--- a/League/Views/Organization/a-indoor/Info/News.cshtml
+++ b/League/Views/Organization/a-indoor/Info/News.cshtml
@@ -13,7 +13,8 @@
 </div>
 <div class="mb-0 pb-1">
     <div class="d-flex flex-column mb-4">
-        Aufgrund der Covid-19 Pandemie musste die Saison 2019/20 leider abgebrochen werden.
+        <p>Aufgrund der Covid-19 Pandemie musste die Hinrunde der Saison 2020/21 leider ausfallen.</p>
+        <p>Wir hoffen weiter darauf, zumindest ab März wieder Spiele austragen zu können.</p>
     </div>
 </div>
 @section styles
