ViewNames is now a class, not a namespace

--- a/League/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/League/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     {
     <meta name="description" content="@ViewData.Description()" />
     }
-    <partial name="@League.ViewNames.Shared._FavIcons" />
+    <partial name="@League.Views.ViewNames.Shared._FavIcons" />
     <link rel="stylesheet" href="~/lib/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/site.min.css" />
     <style type="text/css">
