--- a/League/Views/Account/ExternalSignInConfirmation.cshtml
+++ b/League/Views/Account/ExternalSignInConfirmation.cshtml
@@ -66,5 +66,5 @@
     </div>
 </form>
 @section Scripts {
-    @{ await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial); }
+    @{ await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial); }
 }
