--- a/League/Views/Account/ResetPassword.cshtml
+++ b/League/Views/Account/ResetPassword.cshtml
@@ -56,7 +56,7 @@
 </div>
 @section Scripts {
     @{
-        await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial);
+        await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial);
     }
     <script type="text/javascript">
     $('#@Html.IdFor(m => m.Password)').attr("type", "password");
