--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -30,7 +30,7 @@
                     </span>
                 </div>
                 <small id="passwordHelpBlock" class="form-text text-muted">
-                    <partial name="@League.ViewNames.Shared._passwordRules" />
+                    <partial name="@League.Views.ViewNames.Shared._passwordRules" />
                 </small>
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
@@ -50,4 +50,4 @@
         <button site-ajax-submit class="btn btn-primary">@Localizer["Save"].Value</button>
     </modal-footer>
 </modal>
-@{ await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial); /* register the modal form for validation */ }
+@{ await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial); /* register the modal form for validation */ }
