--- a/League/Views/Team/_EditTeamModalPartial.cshtml
+++ b/League/Views/Team/_EditTeamModalPartial.cshtml
@@ -34,7 +34,7 @@
         @{ if (ViewContext.ClientValidationEnabled)
             {
                 /* register the modal form for validation */
-                <partial name="@nameof(League.ViewNames.Shared._ValidationScriptsPartial)" />
+                <partial name="@nameof(League.Views.ViewNames.Shared._ValidationScriptsPartial)" />
             }
         }
     </modal-footer>
