--- a/League/Views/Account/CreateAccount.cshtml
+++ b/League/Views/Account/CreateAccount.cshtml
@@ -76,7 +76,7 @@
 </div>
 @section Scripts {
     @{
-        await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial);
+        await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial);
     }
     <script type="text/javascript">
         $('#@Html.IdFor(m => m.Email)').focus();
