--- a/League/Views/Account/ForgotPassword.cshtml
+++ b/League/Views/Account/ForgotPassword.cshtml
@@ -35,5 +35,5 @@
     <script type="text/javascript">
         $('#@Html.IdFor(m => m.EmailOrUsername)').focus();
     </script>
-    @{ await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial); }
+    @{ await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial); }
 }
