--- a/League/Views/Account/SignIn.cshtml
+++ b/League/Views/Account/SignIn.cshtml
@@ -88,7 +88,7 @@
     </section>
 </div>
 @section Scripts {
-    @{ await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial); }
+    @{ await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial); }
     @* <partial name="_ValidationScriptsPartial"/> but name not resolved by R# *@
     <script type="text/javascript">
         // Show tab coming from e.g. url#social-network
