--- a/League/Views/Home/Contact.cshtml
+++ b/League/Views/Home/Contact.cshtml
@@ -81,6 +81,6 @@
 </div>
 @section Scripts {
     @{
-        await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial);
+        await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial);
     }
 }
