--- a/League/Views/Manage/_ChangeUsernameModalPartial.cshtml
+++ b/League/Views/Manage/_ChangeUsernameModalPartial.cshtml
@@ -32,4 +32,4 @@
         <button site-ajax-submit class="btn btn-primary">@Localizer["Save"]</button>
     </modal-footer>
 </modal>
-@{ if (ViewContext.ClientValidationEnabled) { await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial); } /* register the modal form for validation */ }
+@{ if (ViewContext.ClientValidationEnabled) { await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial); } /* register the modal form for validation */ }
