--- a/League/Views/Manage/_SetPasswordModalPartial.cshtml
+++ b/League/Views/Manage/_SetPasswordModalPartial.cshtml
@@ -39,4 +39,4 @@
         <button site-ajax-submit class="btn btn-primary">@Localizer["Save"]</button>
     </modal-footer>
 </modal>
-@{ if (ViewContext.ClientValidationEnabled) { await Html.RenderPartialAsync(League.ViewNames.Shared._ValidationScriptsPartial); } /* register the modal form for validation */ }
+@{ if (ViewContext.ClientValidationEnabled) { await Html.RenderPartialAsync(League.Views.ViewNames.Shared._ValidationScriptsPartial); } /* register the modal form for validation */ }
