--- a/League/Views/Match/Fixtures.cshtml
+++ b/League/Views/Match/Fixtures.cshtml
@@ -56,7 +56,7 @@
 <div class="mb-0 pb-1">
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr class="mb-4" />
-    <partial name="@League.ViewNames.Match._FixtureMessagesPartial" model="@Model.FixtureMessage" />
+    <partial name="@League.Views.ViewNames.Match._FixtureMessagesPartial" model="@Model.FixtureMessage" />
     <ul class="nav nav-tabs" id="round-tabs" role="tablist">
         @foreach (var r in rounds)
         {
